feat: replace scalar with rapidoc
